fix: correct whitespace

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
             </section>
             <section class="summary">
                 <h2 id="summary" class="section-title">Summary</h2>
-                <p class="section-subtitle">
-                    I am 29 years old, I work in the pharmacy sector and currently studying web programming in order to change the field of activity.
-                </p>
+                <p class="section-subtitle">I am 29 years old, I work in the pharmacy sector and currently studying web programming in order to change the field of activity.</p>
             </section>
             <section class="skills">
                 <h2 id="skills" class="section-title">Skills</h2>
@@ -74,17 +72,15 @@
                 <h2 id="code" class="section-title">Code</h2>
                 <p class="section-subtitle">
                     <code>
-                        function multiply(a, b){ <br>
-                            return a * b <br>
-                          }
+                        function multiply(a, b) {<br>
+                            return a * b<br>
+                        }
                     </code>
                 </p>
             </section>
             <section class="projects">
                 <h2 id="projects" class="section-title">Projects</h2>
-                <p class="section-subtitle">
-                    My first <a href="https://oneight15.github.io/rsschool-cv/" class="projects-link">resume</a>
-                </p>
+                <p class="section-subtitle">My first <a href="https://oneight15.github.io/rsschool-cv/" class="projects-link">resume</a></p>
             </section>
             <section class="education">
                 <h2 id="education" class="section-title">Education</h2>
@@ -96,9 +92,7 @@
             </section>
             <section class="english">
                 <h2 id="english" class="section-title">English</h2>
-                <p class="section-subtitle">
-                    My level English is A1
-                </p>
+                <p class="section-subtitle">My level English is A1</p>
             </section>
         </div>
     </main>
@@ -109,7 +103,6 @@
                 <li class="footer-item">2022</li>
                 <li class="footer-item"><a href="https://rs.school/js/"><img class="rs-school-logo" src="assets/img/rs_school_js.svg" alt="logo"></a></li>
             </ul>
-                
         </div>
     </footer>
 </body>
