fix: correct yeah and section code

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p class="section-subtitle">
                     <code>
                         function multiply(a, b) {<br>
-                            return a * b<br>
+                        <pre>  return a * b;</pre>
                         }
                     </code>
                 </p>
@@ -99,7 +99,7 @@
         <div class="container">
             <ul class="footer-list">
                 <li class="footer-item">GitHub</li>
-                <li class="footer-item">2022</li>
+                <li class="footer-item">2023</li>
                 <li class="footer-item"><a href="https://rs.school/js/"><img class="rs-school-logo" src="assets/img/rs_school_js.svg" alt="logo"></a></li>
             </ul>
         </div>
