fix: correct css file

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p class="section-subtitle">
                     <code>
                         function multiply(a, b) {<br>
-                        <pre>  return a * b;</pre>
+                        <span class="code-example">  return a * b;</span><br>
                         }
                     </code>
                 </p>
