--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <footer class="footer">
         <div class="container">
             <ul class="footer-list">
-                <li class="footer-item">GitHub</li>
+                <li class="footer-item"><a href="https://github.com/oneight15">GitHub</a></li>
                 <li class="footer-item">2023</li>
                 <li class="footer-item"><a href="https://rs.school/js/"><img class="rs-school-logo" src="assets/img/rs_school_js.svg" alt="logo"></a></li>
             </ul>
